--- a/components/plugin-theme-showcase/plugin-theme-showcase.module.css
+++ b/components/plugin-theme-showcase/plugin-theme-showcase.module.css
@@ -1,30 +1,45 @@
 .nav {
     composes: container from global;
-    position: relative;
-}
-
-.filtersWrapper {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-areas: '. filters submit';
+    height: 24px;
+    line-height: 1;
 }
 
 .filters {
-    border: 1px solid #333333;
-    border-radius: 4px;
-    height: 2.4rem;
+    grid-area: filters;
     display: flex;
-    align-items: center;
 }
 
 .filters a {
-    font-size: 1rem;
-    height: 2.4rem;
-    line-height: 2.4rem;
+    font-size: 10px;
     text-transform: uppercase;
     padding: 0 10px;
     color: #999999;
     cursor: pointer;
     transition: color 0.2s ease;
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
+    display: inline-flex;
+    align-items: center;
+}
+
+.filters a:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-left: 1px solid #333;
+}
+
+.filters a:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-right: 1px solid #333;
+}
+
+.filters a:not(:first-child) {
+    border-left: 1px solid #333;
+    margin-left: -1px;
 }
 
 .filters a:hover,
@@ -33,24 +48,18 @@
     text-decoration: none;
 }
 
-.filters a:not(:last-child) {
-    border-right: 1px solid #333333;
-}
-
 .submitButton {
+    display: inline-flex;
+    align-items: center;
+    grid-area: submit;
+    margin-left: auto;
     cursor: pointer;
     border-radius: 2px;
     background: black;
     color: white;
-    font-size: 1.2rem;
-    height: 2.4rem;
+    font-size: 12px;
     border: 1px solid #333;
     padding: 0 16px;
-    margin-left: auto;
-    opacity: 1;
-    position: absolute;
-    right: 0;
-    top: 0;
     transition: all 200ms ease;
 }
 
@@ -58,12 +67,6 @@
     border-color: #50e3c2;
     background: #50e3c2;
     color: black;
-}
-
-@media (max-width: 900px) {
-    .submitButton {
-        right: 40px;
-    }
 }
 
 @media (max-width: 568px) {
