--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -11,6 +11,7 @@
 
 .logo {
   display: flex;
+  color: white;
 }
 
 .desktopNav {
@@ -55,6 +56,7 @@
 
   .toggle {
     display: block;
+    color: white;
   }
 
   .mobileNav.active {
