fixed missing psuedo class

--- a/styles/pages/index.module.css
+++ b/styles/pages/index.module.css
@@ -62,7 +62,7 @@
   width: 100%;
 }
 
-.heroVideoLoading {
+.heroVideoLoading::before {
   content: 'Loading...';
   position: absolute;
   display: block;
