font-size fixes and better global.css

--- a/components/download-button/download-button.module.css
+++ b/components/download-button/download-button.module.css
@@ -5,7 +5,7 @@
     height: 48px;
     display: flex;
     align-items: center;
-    padding: 0 16px;
+    padding: 0 1rem;
     text-decoration: none;
     transition: background 0.12s ease-in-out;
     line-height: 1;
