--- a/components/plugin-list/plugin-list.module.css
+++ b/components/plugin-list/plugin-list.module.css
@@ -8,7 +8,7 @@
 .listElemContainer {
   display: block;
   color: inherit;
-  padding: 16px 0;
+  padding: 1rem 0;
   cursor: pointer;
   transition: all 0.2s ease;
 }
