--- a/components/plugin-theme-showcase/plugin-theme-showcase.module.css
+++ b/components/plugin-theme-showcase/plugin-theme-showcase.module.css
@@ -59,7 +59,7 @@
     color: white;
     font-size: 12px;
     border: 1px solid #333;
-    padding: 0 16px;
+    padding: 0 1rem;
     transition: all 200ms ease;
 }
 
