--- a/components/plugin/plugin.module.css
+++ b/components/plugin/plugin.module.css
@@ -10,7 +10,7 @@
 .featuredContent {
     position: absolute;
     bottom: 0;
-    padding: 48px 16px 16px;
+    padding: 4rem 1rem 1rem;
     background-image: linear-gradient(-180deg, rgba(0,0,0,0.00) 0%, #000000 100%);
     width: 100%;
 }
@@ -18,13 +18,13 @@
 .featuredContent h4 {
     margin-top: 0;
     margin-bottom: 4px;
-    font-size: 1.6rem;
+    font-size: 1rem;
     font-weight: 400;
 }
 
 .featuredContent p {
     margin-bottom: 0;
-    font-size: 1.2rem;
+    font-size: 12px;
     color: #999999;
 }
 
@@ -64,13 +64,13 @@
 }
 
 .listName {
-    font-size: 1.6rem;
+    font-size: 1rem;
     font-weight: 400;
     margin: 0 0 4px;
 }
 
 .listDescription {
-    font-size: 1.2rem;
+    font-size: 12px;
     color: #999999;
     max-width: 60ch;
 }
