--- a/styles/global.css
+++ b/styles/global.css
@@ -1,128 +1,47 @@
-html,
-body,
-div,
-span,
-object,
-iframe,
-p,
-blockquote,
-pre,
-a,
-abbr,
-address,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strong,
-sub,
-sup,
-var,
-b,
-i,
-dl,
-dt,
-dd,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-header,
-footer,
-section,
-article,
-nav,
-canvas,
-aside,
-figcaption,
-figure,
-hgroup,
-menuitem,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-}
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Oxygen-Sans, 'Fira Sans', 'Droid Sans', Ubuntu, Cantarell, 'Helvetica Neue',
-    sans-serif;
-  font-size: 16px;
-  font-size: 1.6rem;
-  line-height: 1.5em;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  text-decoration: none;
-}
-
-:focus {
-  outline: 0;
-}
-
-pre,
-code,
-kbd,
-samp,
-tt {
-  font-family: Menlo, 'Courier New', Courier, monospace;
-  font-size: 1em;
-}
-
-/*
-  Custom Styles
-  ---
-*/
 :root {
+  --bg: black;
+  --fg: white;
+  --pink: #f81ce5;
+  --font-sans: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Helvetica,
+    Arial, sans-serif;
   --font-mono: 'Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif';
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background: black;
-  color: white;
-  font-size: 1.4rem;
+  background: var(--bg);
+  color: var(--fg);
+  font: 16px/1.5 var(--font-sans);
+}
+
+.container {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 900px) {
+  .container {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+::selection {
+  background-color: var(--pink);
+  color: var(--fg);
 }
 
 a {
   color: #50e3c2;
   cursor: pointer;
   transition: color 0.2s ease;
+  text-decoration: none;
 }
 
 a:hover {
@@ -136,41 +55,4 @@ a.dark {
 
 a.dark:hover {
   color: #666666;
-}
-
-::selection {
-  background-color: #f81ce5;
-  color: #fff;
-}
-
-::-moz-selection {
-  /* Code for Firefox */
-  background: #f81ce5;
-  color: #fff;
-}
-
-/* Paragraphs */
-p {
-  margin-bottom: 16px;
-  font-size: 1.2rem;
-}
-
-/* Helper Classes */
-.text-uppercase {
-  text-transform: uppercase;
-}
-
-/* Helps maintain consistent width */
-.container {
-  width: 900px;
-  max-width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media (max-width: 900px) {
-  .container {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
 }
