--- a/styles/pages/home/hero.module.css
+++ b/styles/pages/home/hero.module.css
@@ -25,7 +25,7 @@
 }
 
 .download > .other {
-  margin-top: 16px;
+  margin-top: 1rem;
   color: white;
   transition: border 200ms ease-in-out;
   border-bottom: 1px solid transparent;
