--- a/components/plugin-theme-showcase/plugin-theme-showcase.module.css
+++ b/components/plugin-theme-showcase/plugin-theme-showcase.module.css
@@ -16,7 +16,7 @@
     font-size: 10px;
     text-transform: uppercase;
     padding: 0 10px;
-    color: #999999;
+    color: var(--gray);
     cursor: pointer;
     transition: color 0.2s ease;
     border-top: 1px solid #333;
