--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
   --font-mono: 'Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif';
 }
 
-* {
+*, *::before, *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -18,24 +18,6 @@ body {
   background: var(--bg);
   color: var(--fg);
   font: 16px/1.5 var(--font-sans);
-}
-
-.container {
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@media (max-width: 900px) {
-  .container {
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-}
-
-::selection {
-  background-color: var(--pink);
-  color: var(--fg);
 }
 
 a {
@@ -49,11 +31,20 @@ a:hover {
   color: #3afacf;
 }
 
-a.dark {
-  color: var(--gray);
-  text-decoration: underline;
+::selection {
+  background-color: var(--pink);
+  color: var(--fg);
 }
 
-a.dark:hover {
-  color: #666666;
+.container {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 900px) {
+  .container {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
 }
