--- a/styles/pages/home/hero.module.css
+++ b/styles/pages/home/hero.module.css
@@ -1,16 +1,14 @@
 .root {
-  height: calc(100vh - 85px);
+  min-height: calc(100vh - 85px);
   display: grid;
-  grid: 'logo' 0.5fr 'video' 50vh 'download' 1fr;
+  grid: 0.5fr 2fr 1fr / auto-flow;
 }
 
 .logo {
-  grid-area: logo;
   margin: auto auto 0;
 }
 
 .video {
-  grid-area: video;
   display: block;
   max-width: 100%;
   max-height: 100%;
@@ -18,7 +16,6 @@
 }
 
 .download {
-  grid-area: download;
   display: flex;
   flex-direction: column;
   align-items: center;
