fixed header on /store pages

--- a/styles/pages/store/index.module.css
+++ b/styles/pages/store/index.module.css
@@ -1,37 +1,37 @@
 .notFound {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .root {
-    padding-bottom: 64px;
-    max-width: 764px;
-    margin: 0 auto;
-    text-align: center;
+  padding-bottom: 64px;
+  max-width: 764px;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.root > h1 {
-    font-size: 1rem;
-    font-weight: 400;
-    text-align: center;
-    display: block;
-    margin-bottom: 1rem;
-    margin-top: 40px;
+.name {
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: center;
+  display: block;
+  margin-bottom: 1rem;
+  margin-top: 40px;
 }
 
 .root > p {
-    color: var(--gray);
-    text-align: center;
-    max-width: 400px;
-    margin: 0 auto 32px;
-    font-size: 12px;
-    font-weight: 400;
+  color: var(--gray);
+  text-align: center;
+  max-width: 400px;
+  margin: 0 auto 32px;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 .root > img {
-    max-width: 100%;
-    width: 600px;
-    margin-bottom: 40px;
+  max-width: 100%;
+  width: 600px;
+  margin-bottom: 40px;
 }
