--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -5,6 +5,7 @@
   font-size: 12px;
   display: flex;
   align-items: center;
+  color: var(--gray);
 }
 
 .content {
@@ -18,12 +19,7 @@
   align-items: center;
 }
 
-.left a,
-.left span {
-  color: var(--gray);
-}
-
-.left a:hover {
+.link:hover {
   color: var(--fg);
 }
 
