--- a/styles/pages/home/installation.module.css
+++ b/styles/pages/home/installation.module.css
@@ -12,7 +12,7 @@
   color: var(--fg);
 }
 
-.table td:not([class*='linkTd']) {
+.table td:nth-child(odd), .table tr:first-child td:nth-child(2) {
   padding: 10px !important;
 }
 
