--- a/components/search-list/search-list.module.css
+++ b/components/search-list/search-list.module.css
@@ -1,10 +1,7 @@
 .searchError {
-  width: 100%;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translateX(-50%);
   text-align: center;
-  height: calc(100vh - 122px);
-  min-height: 124px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
 }
