inter latin subset only

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,15 +1,8 @@
 @font-face {
   font-family: "Inter";
-  font-weight: 400;
-  src: url("/fonts/Inter-Regular.woff2") format("woff2"),
-    url("/fonts/Inter-Regular.woff") format("woff");
-}
-
-@font-face {
-  font-family: "Inter";
-  font-weight: 700;
-  src: url("/fonts/Inter-Bold.woff2") format("woff2"),
-    url("/fonts/Inter-Bold.woff") format("woff");
+  font-weight: 100 900;
+  font-display: block;
+  src: url("/inter.woff2") format("woff2");
 }
 
 :root {
