--- a/components/download-button/download-button.module.css
+++ b/components/download-button/download-button.module.css
@@ -1,21 +1,26 @@
 .root {
-    background: #fff;
-    border-radius: 5px;
-    color: #000;
-    height: 48px;
-    display: flex;
-    align-items: center;
-    padding: 0 1rem;
-    text-decoration: none;
-    transition: background 0.12s ease-in-out;
-    line-height: 1;
+  background: #fff;
+  border-radius: 5px;
+  color: #000;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+  text-decoration: none;
+  transition: background 200ms ease-in-out;
+  line-height: 1;
 }
 
 .root:hover {
-    background: #e5e5e5;
-    color: black;
+  background: #e5e5e5;
+  color: black;
 }
 
 .root svg {
-    margin-right: 12px;
+  margin-right: 12px;
+}
+
+.root.fixedWidth {
+  min-width: 280px;
 }
